y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  $$8 :

  25  cmd : FOR $$7 '(' exp ')' $$8 cmd

  26  $$9 :

  27  cmd : IF '(' exp $$9 ')' cmd restoIf

  28  $$10 :

  29  restoIf : ELSE $$10 cmd
  30          |

  31  exp : NUM
  32      | TRUE
  33      | FALSE
  34      | ID
  35      | '(' exp ')'
  36      | '!' exp
  37      | ID '=' exp
  38      | exp '+' exp
  39      | exp '-' exp
  40      | exp '*' exp
  41      | exp '/' exp
  42      | exp '%' exp
  43      | ID INC
  44      | exp '>' exp
  45      | exp '<' exp
  46      | exp EQ exp
  47      | exp LEQ exp
  48      | exp GEQ exp
  49      | exp NEQ exp
  50      | exp OR exp
  51      | exp AND exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	'{'  shift 30
	FOR  shift 31
	'}'  reduce 4

	$$3  goto 32
	cmd  goto 33
	exp  goto 34


state 20
	exp : ID .  (34)
	exp : ID . '=' exp  (37)
	exp : ID . INC  (43)

	INC  shift 35
	'='  shift 36
	EQ  reduce 34
	LEQ  reduce 34
	GEQ  reduce 34
	NEQ  reduce 34
	AND  reduce 34
	OR  reduce 34
	'>'  reduce 34
	'<'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'*'  reduce 34
	'/'  reduce 34
	'%'  reduce 34
	')'  reduce 34
	';'  reduce 34


state 21
	exp : NUM .  (31)

	.  reduce 31


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 37
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 38
	.  error


state 24
	cmd : IF . '(' exp $$9 ')' cmd restoIf  (27)

	'('  shift 39
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 40


state 26
	exp : TRUE .  (32)

	.  reduce 32


state 27
	exp : FALSE .  (33)

	.  reduce 33


state 28
	exp : '!' . exp  (36)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 41


state 29
	exp : '(' . exp ')'  (35)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 42


state 30
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 43


state 31
	cmd : FOR . $$7 '(' exp ')' $$8 cmd  (25)
	$$7 : .  (23)

	.  reduce 23

	$$7  goto 44


state 32
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 45
	.  error


state 33
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 34
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	EQ  shift 46
	LEQ  shift 47
	GEQ  shift 48
	NEQ  shift 49
	AND  shift 50
	OR  shift 51
	'>'  shift 52
	'<'  shift 53
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	';'  shift 59
	.  error


state 35
	exp : ID INC .  (43)

	.  reduce 43


state 36
	exp : ID '=' . exp  (37)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 60


state 37
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 61
	.  error


state 38
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 62
	.  error


state 39
	cmd : IF '(' . exp $$9 ')' cmd restoIf  (27)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 63


state 40
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 64
	.  error


state 41
	exp : '!' exp .  (36)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	.  reduce 36


state 42
	exp : '(' exp . ')'  (35)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	EQ  shift 46
	LEQ  shift 47
	GEQ  shift 48
	NEQ  shift 49
	AND  shift 50
	OR  shift 51
	'>'  shift 52
	'<'  shift 53
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	')'  shift 65
	.  error


state 43
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	'{'  shift 30
	'}'  shift 66
	FOR  shift 31
	.  error

	cmd  goto 33
	exp  goto 34


state 44
	cmd : FOR $$7 . '(' exp ')' $$8 cmd  (25)

	'('  shift 67
	.  error


state 45
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 46
	exp : exp EQ . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 68


state 47
	exp : exp LEQ . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 69


state 48
	exp : exp GEQ . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 70


state 49
	exp : exp NEQ . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 71


state 50
	exp : exp AND . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 72


state 51
	exp : exp OR . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 73


state 52
	exp : exp '>' . exp  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 74


state 53
	exp : exp '<' . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 75


state 54
	exp : exp '+' . exp  (38)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 76


state 55
	exp : exp '-' . exp  (39)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 77


state 56
	exp : exp '*' . exp  (40)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 78


state 57
	exp : exp '/' . exp  (41)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 79


state 58
	exp : exp '%' . exp  (42)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 80


state 59
	cmd : exp ';' .  (14)

	.  reduce 14


state 60
	exp : ID '=' exp .  (37)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	EQ  shift 46
	LEQ  shift 47
	GEQ  shift 48
	NEQ  shift 49
	AND  shift 50
	OR  shift 51
	'>'  shift 52
	'<'  shift 53
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	')'  reduce 37
	';'  reduce 37


state 61
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 81
	.  error


state 62
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 82
	','  reduce 17

	$$4  goto 83


state 63
	cmd : IF '(' exp . $$9 ')' cmd restoIf  (27)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)
	$$9 : .  (26)

	EQ  shift 46
	LEQ  shift 47
	GEQ  shift 48
	NEQ  shift 49
	AND  shift 50
	OR  shift 51
	'>'  shift 52
	'<'  shift 53
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	')'  reduce 26

	$$9  goto 84


state 64
	cmd : WHILE $$5 '(' . exp ')' $$6 cmd  (22)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 85


state 65
	exp : '(' exp ')' .  (35)

	.  reduce 35


state 66
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


state 67
	cmd : FOR $$7 '(' . exp ')' $$8 cmd  (25)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 86


state 68
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp EQ exp .  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	EQ  reduce 46
	LEQ  reduce 46
	GEQ  reduce 46
	NEQ  reduce 46
	AND  reduce 46
	OR  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	')'  reduce 46
	';'  reduce 46


state 69
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp LEQ exp .  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	EQ  reduce 47
	LEQ  reduce 47
	GEQ  reduce 47
	NEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	')'  reduce 47
	';'  reduce 47


state 70
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp GEQ exp .  (48)
	exp : exp . NEQ exp  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)

	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	EQ  reduce 48
	LEQ  reduce 48
	GEQ  reduce 48
	NEQ  reduce 48
	AND  reduce 48
	OR  reduce 48
	'>'  reduce 48
	'<'  reduce 48
	')'  reduce 48
	';'  reduce 48


state 71
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (44)
	exp : exp . '<' exp  (45)
	exp : exp . EQ exp  (46)
	exp : exp . LEQ exp  (47)
	exp : exp . GEQ exp  (48)
	exp : exp . NEQ exp  (49)
	exp : exp NEQ exp .  (49)
	exp : exp . OR exp  (50)
	exp : exp . AND exp  (51)
